[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "optbinning-namnh"
version = "0.1.0"
description = "PSI-constrained optimal binning extension for optbinning"
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    # Pin optbinning tightly: this package depends on internal APIs
    # (_fit_optimizer, BinningCP/ContinuousBinningCP, the build_model signature).
    # When bumping optbinning, re-check and re-run the tests.
    "optbinning>=0.21,<0.22",
    "numpy>=1.16.1",
]

[project.optional-dependencies]
test = ["pytest", "scikit-learn>=1.6.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["optbinning_namnh*"]
